Revision history for DBIx::Simple::Class

0.62    2012-03-10 02:57:59 EET
        - Switched to Artistic License version 2.0.
        - Refactored tests. Moved out test-shema classes (My).

0.61    2012-02-26 01:02:31 EET
        - SQL Queries dumps stop/start immediately upon (un)setting DEBUG.
        - Small optimizations in BUILD().
        - Improved documentation.

0.60    2012-02-25 00:31:08 EET
        - This is a major release! API seems pretty stable and complete enough.
        - Added documentation for "delete".
        - Fixed potential bug with pre-set primary key.
        - No warnings from Params::Check in tests anymore.
        - Improved and moved POD to Checks.pod for easier spellchecking. Spellcheck.
        - Renamed _make_field_attrs() to BUILD() and added documentation,
          thus allowing developers to inject their custom logic officially :).
        - Added DBI callback to dump the prepared SQL query if DEBUG(1).
        - Added QUOTE_IDENTIFIERS flag to quote bad table/column names.
        - Updated README.
        
0.57    2012-02-20 16:28:56 EET
        - Happy birthday to me! This release is my present for my self and everyone else!
        - Fixed new_from_dbix_simple to be context aware
        - Added find() alias for select_by_pk()
        - Added SQL_LIMIT() custom SQL piece
        - $dbh->{RaiseError} ==1 by default
        - Added more tests
        - Updated README
        - BUILD_REQUIRES => {'DBD::SQLite' => '1.29'},
        - Overall test coverage 93.8%
0.56    2012-02-19 14:16:18 EET
        - Fixed bug:"my $SQL" declared twice
        - Optimised update() and insert() to use directly DBI
          instead of $dbix->query
        - Optimised new_from_dbix_simple  to use directly DBI 
          instead of $dbix->hash 
        - Got back to $class->dbix() instead of just dbix()
          to allow subclasses to override dbix()
        - Added new named queries (INSERT, UPDATE) to private $SQL 