@@ -8,5 +8,8 @@ ignore.txt
 t/00-load.t
 t/01-dbix-simple-class.t
 t/manifest.t
+t/boilerplate.t
 t/pod-coverage.t
 t/pod.t
+t/My.pm
+t/My/Groups.pm
